# SamplingCausalSets

./: BD_action_hamiltonian.py  CITATION.cff  LICENSE.txt  Omega.py  README.md  Sampler.py  SamplerTesting.py  brute_force_sampling.py  closure_constraint.py  helpers.py  henson_sampling.py  pyproject.toml  spectralgap.py  spectralgapanalyser.py  thermalisation_analyser.py
notebooks/: constraint_tutorial.ipynb  sampling_tutorial.ipynb  spectral_gap_tutorial_new.ipynb
save_files/: unique_causal_matrices_3.pkl  unique_causal_matrices_4.pkl  unique_causal_matrices_5.pkl  unique_causal_matrices_6.pkl  unique_matrices_3.pkl  unique_matrices_4.pkl  unique_matrices_5.pkl
save_files/A_mats_4d/: A_mat_3_1_0.pkl  A_mat_4_1_0.pkl  A_mat_5_1_0.pkl
save_files/Q_mats/: classical_3_4_both.pkl  classical_4_4_both.pkl  classical_5_4_both.pkl  quantum_3_4_range_0.7_0.8_0.05_0.2.pkl  quantum_4_4_range_0.7_0.8_0.05_0.2.pkl
