[project]
name = "samplingcausalsets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dill==0.4.0",
    "docopt==0.6.2",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "fonttools==4.58.2",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyterlab-pygments==0.3.0",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "mpmath==1.3.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "networkx==3.5",
    "numpy==2.3.0",
    "packaging==25.0",
    "pandas==2.3.0",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pbr==6.1.1",
    "pickleshare==0.7.5",
    "pillow==11.2.1",
    "pipreqs==0.5.0",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==26.4.0",
    "qiskit==1.4.0",
    "qiskit-aer==0.17.1",
    "qiskit-algorithms==0.3.1",
    "qiskit-qulacs==0.1.0",
    "qulacs==0.6.12",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rpds-py==0.25.1",
    "rustworkx==0.16.0",
    "scipy==1.15.3",
    "six==1.17.0",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "stevedore==5.4.1",
    "symengine==0.13.0",
    "sympy==1.14.0",
    "tinycss2==1.4.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.14.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "yarg==0.1.9",
    "zipp==3.23.0",
]
